styling the css and more html elements

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,27 @@
 body {
-  background: #e7eaf6;
+  background: #cca8e9;
   font-family: "Rubik", sans-serif;
+}
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
 }
 
 .weather-app {
-  background-color: aliceblue;
+  background-color: white;
+  margin: 45px auto;
+  max-width: 270px;
+  padding: 30px;
+  border-radius: 14px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
 .search-button {
+  border: none;
+  border-radius: 6px;
+  width: 70%;
+  font-size: 16px;
+  padding: 15 px 20px;
 }
 
 .weather-forecast {
