--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,11 @@ header {
   padding: 0 0 30px 0;
 }
 
+footer {
+  padding: 4px 0 0 0;
+  font-size: 9px;
+}
+
 .weather-app {
   background-color: white;
   margin: 45px auto;
@@ -16,14 +21,42 @@ header {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
-.search-button {
+.write-button {
   border: none;
+  background-color: #ede2f6;
   border-radius: 6px;
-  width: 70%;
-  font-size: 16px;
-  padding: 15 px 20px;
+  width: 63%;
+  font-size: 10px;
+  padding: 13px 42px;
+}
+
+.search-botton {
+  background: #d268fe;
+  padding: 12px 28px;
+  border: none;
+  font-size: 10px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
+}
+
+.weather-image {
+  display: block;
+  margin: 0 auto;
+  max-width: 50%;
+}
+
+.current-weather {
+  text-align: center;
+  font-weight: 600;
+  font-size: 31px;
+}
+
+.extra-info {
+  text-align: center;
 }
 
 .weather-forecast {
   display: flex;
+  justify-content: space-between;
 }
