--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,9 @@ footer {
 a {
   color: rgb(228, 138, 187);
 }
+main {
+  padding: 30px 0;
+}
 
 .weather-app {
   background-color: white;
@@ -74,4 +77,11 @@ a {
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
