add new things and make changes to thge function formatDay
Add 24 hours to the current timestamp

--- a/src/style.css
+++ b/src/style.css
@@ -92,10 +92,10 @@ main {
 }
 
 .weather-forecast-icon {
-  width: 35px;
-  height: 42px;
-  display: block;
-  margin: 0px auto;
+width: 88px;
+height: 88px;
+display: block;
+margin: 0 auto; 
 }
 
 .weather-forecast-temperatures {
