--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #200633;
+  background: #200633ea;
   font-family: "Rubik", sans-serif;
 }
 header {
@@ -21,7 +21,7 @@ main {
 }
 
 .weather-app {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.767);
   margin: 45px auto;
   max-width: 431px;
   padding: 30px;
@@ -29,6 +29,7 @@ main {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   line-height: 1.5;
   justify-content: space-around;
+
 }
 .search-form {
   text-align: center;
