--- a/src/style.css
+++ b/src/style.css
@@ -17,19 +17,20 @@ a {
   color: rgb(228, 138, 187);
 }
 main {
-  padding: 30px 0;
+  padding: 18px 0;
 }
 
 .weather-app {
   background-color: rgba(255, 255, 255, 0.767);
-  margin: 45px auto;
+  margin: -64px auto;
   max-width: 431px;
   padding: 30px;
   border-radius: 14px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   line-height: 1.5;
+  transform: scale(0.8);
+  transform-origin: center center;
   justify-content: space-around;
-
 }
 .search-form {
   text-align: center;
@@ -93,10 +94,10 @@ main {
 }
 
 .weather-forecast-icon {
-width: 88px;
-height: 88px;
-display: block;
-margin: 0 auto; 
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 
 .weather-forecast-temperatures {
@@ -109,4 +110,3 @@ margin: 0 auto;
 .weather-forecast-temperature {
   padding: 0 10px;
 }
-
