--- a/src/style.css
+++ b/src/style.css
@@ -22,13 +22,13 @@ main {
 
 .weather-app {
   background-color: rgba(255, 255, 255, 0.767);
-  margin: -64px auto;
+  margin: 0 auto;
   max-width: 431px;
   padding: 30px;
   border-radius: 14px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   line-height: 1.5;
-  transform: scale(0.8);
+  transform: scale(0.9);
   transform-origin: center center;
   justify-content: space-around;
 }
